@startuml

title __WS_TD4's Class Diagram__\n

  package exo1.exo1serveur {
    class Application {
    }
  }
  

  package exo2.serveur {
    class Application {
    }
  }
  

  package exo1.exo1client {
    class Application {
    }
  }
  

  package exo2.client {
    class Application {
    }
  }
  

  package exo2.serveur {
    class Serveur {
    }
  }
  

  package exo1.exo1serveur {
    class Serveur {
    }
  }
  

  package exo2.serveur {
    class ServiceInversion {
    }
  }
  

  package exo1.exo1serveur {
    class ServiceInversion {
    }
  }
  

  Serveur -up-|> Runnable
  Serveur -up-|> Runnable
  ServiceInversion -up-|> Runnable
  ServiceInversion -up-|> Runnable


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
